change background, font + button style

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Etch-a-sketch squares</title>
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai" rel="stylesheet">
     <link rel="stylesheet" href="css/squares.css" type="text/css">
 </head>
 
 <body>
-    <div class="header">
-        <h1 class="pace">Square of Fortune</h1>
+    <div id="header">
+        <h1>Square of Fortune</h1>
         <button id="clearButton">Start A New Grid!</button>
     </div>
     <div class="container">
