--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 
 <body>
-    <div id="header">
-        <h1>Square of Fortune</h1>
-        <button id="clearButton">Start A New Grid!</button>
-    </div>
-    <div class="container">
-    </div>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script> -->
+    <main>
+        <div id="header">
+            <h1>Square of Fortune</h1>
+            <button id="clearButton">Start A New Grid!</button>
+        </div>
+        <div class="container">
+        </div>
+    </main>
     <script src="js/squares.js" type="text/javascript"></script>
 </body>
 
