--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <div id="header">
-            <h1>Square of Fortune</h1>
+            <h1>Sketch-A-Etch</h1>
             <button id="clearButton">Start A New Grid!</button>
         </div>
         <div class="container">
